Preparando para começar o projeto

--- a/src/app/components/consultar-situacao/consultar-situacao.component.html
+++ b/src/app/components/consultar-situacao/consultar-situacao.component.html
@@ -1,1 +1,7 @@
+<a routerLink="/envio">Envio</a>
+<br>
+<a routerLink="/recepcao">Recepção</a>
+<br>
+<a routerLink="/consultar-situacao">Consultar Situação</a>
+
 <p style="font-size: 100px; background-color: green">consultar-situacao works!</p>
