Mudanças no Envio

--- a/src/app/components/envio/envio.component.html
+++ b/src/app/components/envio/envio.component.html
@@ -1,7 +1,12 @@
-<a routerLink="/envio">Envio</a>
-<br>
-<a routerLink="/recepcao">Recepção</a>
-<br>
-<a routerLink="/consultar-situacao">Consultar Situação</a>
+<main>
+  <div id="arquivo" class="arquivo col-md-24">
+    <label>Nome do Arquivo:</label>
+    <input type="text" />
+    <button type="button" class="btn btn-secondary">Procurar</button>
+    <button type="button" class="btn btn-secondary">Processar</button>
+  </div>
 
-<p style="font-size: 100px; background-color: red">envio works!</p>
+  <div id="detalhes" class="detalhes"></div>
+
+  <div id="botoes" class="botoes"></div>
+</main>
