Trabalhando na tela de login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
-    <a routerLink="/envio"><button class="nav-link active" id="nav-envio-tab" data-bs-toggle="tab" data-bs-target="#nav-envio" type="button" role="tab" aria-controls="nav-envio" aria-selected="true">Envio</button></a>
-    <a routerLink="/recepcao"><button class="nav-link" id="nav-recepcao-tab" data-bs-toggle="tab" data-bs-target="#nav-recepcao" type="button" role="tab" aria-controls="nav-recepcao" aria-selected="false">Recepção</button></a>
-    <a routerLink="/consultar-situacao"><button class="nav-link" id="nav-consultar-situacao-tab" data-bs-toggle="tab" data-bs-target="#nav-consultar-situacao" type="button" role="tab" aria-controls="nav-consultar-situacao" aria-selected="false">Consultar Situação</button></a>
+    <a routerLink="envio"><button class="nav-link active" id="nav-envio-tab" data-bs-toggle="tab" data-bs-target="#nav-envio" type="button" role="tab" aria-controls="nav-envio" aria-selected="true">Envio</button></a>
+    <a routerLink="recepcao"><button class="nav-link" id="nav-recepcao-tab" data-bs-toggle="tab" data-bs-target="#nav-recepcao" type="button" role="tab" aria-controls="nav-recepcao" aria-selected="false">Recepção</button></a>
+    <a routerLink="consultar-situacao"><button class="nav-link" id="nav-consultar-situacao-tab" data-bs-toggle="tab" data-bs-target="#nav-consultar-situacao" type="button" role="tab" aria-controls="nav-consultar-situacao" aria-selected="false">Consultar Situação</button></a>
   </div>
 </nav>
-<router-outlet class="container-fluid w-100 h-100"></router-outlet>
+<router-outlet></router-outlet>
